W02: Individual project and also switched to different way to connect to the db
