# routes/index.js
@@ -1,6 +1,6 @@
 const routes = require('express').Router();
 const contacts = require('./contacts');
-const getProfessionalDataController = require('../controllers/professionalData');
+//const getProfessionalDataController = require('../controllers/professionalData');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./../swagger.json');
 
@@ -8,6 +8,6 @@ routes.use('/api-docs', swaggerUi.serve);
 routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
 routes.use('/contacts', contacts);
-routes.get('/professional', getProfessionalDataController.getData);
+//routes.get('/professional', getProfessionalDataController.getData);
 
 module.exports = routes;
